SERVER-51834 Race in moveChunk tests